<resources>
    <string name="app_name">Employed me</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Contact us</string>
    <string name="employed_me">Employed Me</string>
    <string name="log_in">log in</string>
    <string name="sign_up">sign up</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">log in</string>
    <string name="signup">SignUp</string>
    <string name="emptyString" />
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="pass">Password</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="user">User Name</string>
    <string name="email">E-mail</string>
    <string name="name">Name</string>
    <string name="sign">SignUp</string>
    <string name="emptyString2" />
    <string name="emptyString3" />
    <string name="emptyString4" />
    <string name="NAME">NAME:</string>
    <string name="USER_NAME">USER NAME:</string>
    <string name="emptyString5" />
    <string name="discription">discription</string>
    <string name="servant">Find Local Servant</string>
    <string name="work">Type of Work</string>
    <string name="search">Search</string>
    <string name="gender">gender</string>
    <string name="city_name">City Name</string>
    <string name="emptyString6" />
    <string name="emptyString7" />
    <string name="emptyString8" />
    <string name="emptyString9" />
    <string name="emptyString10" />
    <string name="uploadpic">upload profile picture</string>
    <string name="wel">welcome,</string>
    <string name="search1">Search</string>
    <string name="cname">City Name</string>
    <string name="con">Contact No.</string>
    <string name="emptyString11" />
    <string name="emptyString12" />
    <string name="emptyString13" />
    <string name="emptyString14" />
    <string name="genderr">Gender</string>
    <string name="serreq">Servant require</string>
    <string name="wreq">Work required</string>
    <string name="citi">City</string>
    <string name="age">Age</string>
    <string name="wcome">welcome,</string>
    <string name="typjob">Type of Job</string>
    <string name="fljob">Find Local Job</string>
    <string name="wcome2">welcome,</string>
    <string name="emptyString15" />
    <string name="emptyString16" />
    <string name="emptyString17" />
    <string name="ag">Age</string>
    <string name="emptyString18" />
    <string name="gend" />
    <string name="emptyString19" />
    <string name="emptyString20" />
    <string name="emptyString21" />
    <string name="gn">Gender:</string>
    <string name="emptyString22" />
    <string name="kkd">SO DONT LOSE YOU YOUR MOMENT AND LET\'S TAKE A TOUR WITH US</string>
    <string name="wc">WELCOME ,</string>
    <string name="display_share">display_share</string>
    <string name="share">share</string>
    <string name="d">Large Text</string>
    <string name="c">Large Text</string>
    <string name="b">Large Text</string>
    <string name="a">Large Text</string>
    <string name="shar">share</string>
    <string name="pref_location_default">443201</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="wcm">welcome</string>

</resources>
