<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAlignment="center"
        android:textSize="40dp"
        android:text="@string/fljob"
        android:id="@+id/textView8"
        android:background="#fffdff1a" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/emptyString20"
        android:ems="10"
        android:id="@+id/bjobname"
        android:layout_above="@+id/bcityname"
        android:layout_marginBottom="71dp"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/emptyString21"
        android:ems="10"
        android:id="@+id/bcityname"
        android:layout_above="@+id/bjobseach"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="71dp"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/search1"
        android:id="@+id/bjobseach"
        android:layout_marginBottom="87dp"
        android:clickable="true"
        android:onClick="onbButtonClick"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/wcome"
        android:id="@+id/textView11"
        android:layout_below="@+id/textView8"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/emptyString6"
        android:id="@+id/jobwel"
        android:layout_below="@+id/textView8"
        android:layout_toEndOf="@+id/textView11" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Job"
        android:id="@+id/textView19"
        android:layout_above="@+id/bjobname"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="City Name"
        android:id="@+id/textView20"
        android:layout_above="@+id/bcityname"
        android:layout_alignParentStart="true" />
</RelativeLayout>

