<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@android:color/background_light">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAlignment="center"
        android:textSize="40dp"
        android:text="@string/servant"
        android:id="@+id/textView8"
        android:background="#ffff1019" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/emptyString15"
        android:ems="10"
        android:id="@+id/sercitiname"
        android:layout_below="@+id/textView15"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/emptyString16"
        android:ems="10"
        android:id="@+id/sergen"
        android:layout_below="@+id/sercitiname"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/emptyString17"
        android:ems="10"
        android:id="@+id/serworkf"
        android:layout_below="@+id/serwork"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/bservantsearch"
        android:layout_below="@+id/serworkf"
        android:layout_alignParentStart="true"
        android:layout_marginTop="67dp"
        android:clickable="true"
        android:onClick="onbButtonClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/wcome2"
        android:id="@+id/textView11"
        android:layout_below="@+id/textView8"
        android:layout_toEndOf="@+id/sercitiname" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/emptyString7"
        android:id="@+id/textView12"
        android:layout_below="@+id/textView8"
        android:layout_toEndOf="@+id/textView11" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="City Name"
        android:id="@+id/textView15"
        android:layout_below="@+id/textView12"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Gender"
        android:id="@+id/textView16"
        android:layout_below="@+id/sercitiname"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Work Field"
        android:id="@+id/serwork"
        android:layout_below="@+id/sergen"
        android:layout_alignParentStart="true" />


</RelativeLayout>
